# Private_Recommender_System

./: .gitignore  README.md
code/: CMakeLists.txt  RS_Benches  Todo.md  dataset_readme.txt  main.cpp  notes.md  privaterecommender  setup.md  standards.md  welcome.txt
code/graph_scripts/: 1k_fullsize_reducedsize_privacygain.py  2k_fullsize_reducedsize_privacygain.py  3k_fullsize_reducedsize_privacygain.py  aby_vs_tinygarble2.py  custom_graph.py  datasetsize_memory.py  k_datasetsize_time.py  k_he_reduced_original_accuracy.py
code/measurements/: accuracy_he_original_reduced.md  k_datasetsize_speed.md  privacy_gain_for_k.md
code/src/algorithms/: uniformrandshuffle.cpp
code/src/bfv/: bfv.cpp
code/src/clientside/: client.cpp
code/src/doram/: initdoram.cpp
code/src/gc/: doramdatabaseread.cpp  doramreadclusterstopk.cpp  kreyviumencrypt.cpp  shareddistancetopk.cpp  stashplusdoramdatapointtopk.cpp
code/src/kreyvium/: kreyviumplain.cpp
code/src/process/: doramclusterpointstopk.cpp  doramread.cpp  group.cpp  stash.cpp  stashplusdoramtopk.cpp
code/src/python/: crosscheckcopyclusterdata.py  crosscheckfindtopk.py  datasetdistance.py  findclustercenterswithids.py  groupclustercenters.py  neighbourhoodreuse.py  neighbourhoodreuse_with_dp.py  normalizedatasetcoloumn.py  serializedataset.py  stashpreprocessing.py  synthdatagenerator_after_reuseknn.py  synthdatagenerator_before_reuseknn.py
code/src/serverside/: server.cpp
code/src/utils/: config.cpp  convert.cpp  filehandler.cpp  globalvarclient.cpp  globalvarserver.cpp  math.cpp  print.cpp  pythonfunc.cpp  security.cpp  timer.cpp  vectors.cpp
